<resources>
    <string name="app_name">Калькулятор Строителя</string>
    <string name="action_settings">Settings</string>
    <string name="concrete">Бетон</string>
    <string name="cutting">Порізка</string>
    <string name="name_button_size">Розміри/Тип наповнювача</string>
    <string name="name_button_mark_concrete">Марка бетону</string>
    <string name="name_button_size_of_filler">Розмір наповнювача</string>
    <string name="name_button_result">Результат</string>
    <string name="enter_size">Ведіть розмір[м]</string>
    <string name="coordinate_x">X:</string>
    <string name="coordinate_y">Y:</string>
    <string name="coordinate_z">Z:</string>
    <string name="chad">Гравій/Щебінь</string>
    <string name="scree">Щебінь</string>
    <string name="grid">Гравій</string>
    <string name="choose_marc_concrete">Виберіть марку бетону</string>
    <string name="m_100">M-100</string>
    <string name="m_150">M-150</string>
    <string name="m_200">M-200</string>
    <string name="m_250">M-250</string>
    <string name="m_300">M-300</string>
    <string name="m_350">M-350</string>
    <string name="m_400">M-400</string>
    <string name="size_chad">Розмір гравію/щебню</string>
    <string name="mm_10">10-20 mm</string>
    <string name="mm_40">40 mm</string>
    <string name="mm_60">60 mm</string>
    <string name="mm_80">80 mm</string>
    <string name="price">Ціна</string>
    <string name="price_cement">Ціна цементу [кг]:</string>
    <string name="price_sand">Ціна піску [кг]</string>
    <string name="price_filler">Ціна наповнювача [кг]</string>
    <string name="water">Води [л]: ~ </string>
    <string name="cement">Цементу [кг]: </string>
    <string name="sand">Піска [кг]: </string>
    <string name="filler">Наповнювача [кг]: </string>
    <string name="volume">Загальний об’єм [м3]</string>
    <string name="generic_price_cement">Загальна ціна цементу:</string>
    <string name="generic_price_sand">Загальна ціна піска:</string>
    <string name="generic_price_filler">Ціна наповнювача</string>
    <string name="storage">Склад</string>
    <string name="add">Додати</string>
    <string name="number">Кількість</string>
    <string name="length">Довжина[м]</string>
    <string name="update">Обновить</string>
</resources>
